--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
         <% if (locals.front) { %>
           <% i = 0; %>
           <% for (var index = 0; index < 5; index++) { %>
-              <% if (locals.front[index].null != true) { %>
+              <% if (locals.front[index] && locals.front[index].null != true) { %>
                 <div class="carousel-item <% if(index == 0) { %>active<% } %>">
                     <img class="d-block w-100" src="http://localhost:8089/api/front/image/<%= locals.front[index]._id %>" alt="<%= i %>slide">
                     <div class="carousel-caption d-none d-md-block">
@@ -82,7 +82,7 @@
         <% if (locals.front) { %>
           <% i = 0; %>
           <% for (var index = 0; index < 5; index++) { %>
-              <% if (locals.front[index].null != true) { %>
+              <% if (locals.front[index] && locals.front[index].null != true) { %>
                 <li data-target="#carousel-thumb" data-slide-to="<%= i %>" <% if(index == 0) { %>class='active'<% } %>> 
                     <img class="d-block w-100" src="http://localhost:8089/api/front/image/<%= locals.front[index]._id %>" alt="..." class="img-fluid">
                 </li>
