--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -6,7 +6,7 @@
         <h6 class="text-center">*Pensez à utiliser des images au format paysage...</h5>
         <% if (locals.front) { %>
             <% for (var index = 0; index < 5; index++) { %>
-                <% if (locals.front[index].null != true) { %>
+                <% if (locals.front[index] && locals.front[index].null != true) { %>
                     <form name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);" class="text-center front-form">
                         <div class="form-group" id="uploadGroup<%= index %>">
                             <label for="upload<%= index %>" class="btn btn-outline-warning">Select an image</label>
@@ -38,6 +38,21 @@
                     </form>
                 <%  } %>
             <% } %>
+        <% } else { %>
+            <form name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);" class="text-center front-form">
+                <div class="form-group" id="uploadGroup0">
+                    <label for="upload0" class="btn btn-outline-warning">Select an image</label>
+                    <input type="file" name="img" id="upload0" class="inputfile" onchange="readURL(this);">
+                </div>
+                <img id="image0" src="" style="width: 100%; height: auto; display: none;" alt="uploadedImg" data-uploaded="false">
+                <div class="form-group text-center">
+                    <button id="delete0" onclick="deleteImage(this, event);" class="btn btn-outline-warning" style="display: none;">Delete</button>
+                </div>
+                <input type="hidden" name="referenceId" value="0">
+                <div id="uploadbtn0" class="form-group" style="display: none;">
+                    <button type="submit" name="submit" class="btn btn-outline-warning">Upload</button>
+                </div>
+            </form>
         <% } %>
     </div>
 </div>
