--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap'); /* pacifico for navbar logo */
+@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
-.colors {
-  color: #93BEDF,#465775, #3498db; /* use vars */
-  color: white, #eee, #fff, #cecece, #f1f1f1;
-  color: #333, black, #adadad, #a87906;
+:root {
+  --color-shade-1: #93BEDF;
+  --color-shade-2: #3498DB;
+  --color-shade-3: #465775;
+
+  --white-shade-1: #FFFFFF;
+  --white-shade-2: #F1F1F1;
+
+  --dark-shade-1: #000000;
+  --dark-shade-2: #333333;
+  --dark-shade-3: #ADADADAD;
+  --dark-shade-4: #A87906;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body, html {
@@ -38,7 +48,12 @@ body, html {
   margin: 5px 0 5px 0;
 }
 
+.lostpw-form {transform: translate(-50%, 20%);}
 
+.info-update {
+  border-radius: 5px;
+  transform: translate(-50%, 0%);
+}
 
 /* HEADER */
 header {
@@ -54,15 +69,13 @@ header {
 }
 
 header:hover {
-  background-color: white;
-  border-bottom: 2px solid #3498db;
+  background-color: var(--white-shade-1);
+  border-bottom: 2px solid var(--color-shade-2);
   -webkit-box-shadow: 0px -1px 10px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px -1px 10px 0px rgba(0,0,0,0.75);
   box-shadow: 0px -1px 10px 0px rgba(0,0,0,0.75);
 }
-header:hover .navbar-container .navbar-custom .logo, header:hover .navbar-container .navbar-custom .nav-links li a {color: #93BEDF;}
-
-
+header:hover .navbar-container .navbar-custom .logo, header:hover .navbar-container .navbar-custom .nav-links li a {color: var(--color-shade-1);}
 .hamburger {
   display: none;
   cursor: pointer;
@@ -74,14 +87,14 @@ header:hover .navbar-container .navbar-custom .logo, header:hover .navbar-contai
 .line {
   width: 30px;
   height: 3px;
-  background-color: #93BEDF;
+  background-color: var(--color-shade-1);
   margin: 5px;
 }
 
 .logo {
   cursor: pointer;
   margin: 0;
-  color: #FFFFFF;
+  color: var(--white-shade-1);
   transition: ease-in-out 0.3s;
 }
 
@@ -103,56 +116,44 @@ header:hover .navbar-container .navbar-custom .logo, header:hover .navbar-contai
   display: inline-block;
   margin: 0 20px;
 }
-.nav-links li:hover {background-color: #eee;}
+.active {border-bottom: 4px solid var(--color-shade-3);}
+.nav-links li:hover {background-color: var(--white-shade-2);}
 
 .nav-links li a {
-  color: #ffffff;
+  color: var(--white-shade-1);
   text-decoration: none;
   font-size: 20px;
   font-weight: 600;
 }
 
 .nav-links li a:hover {
-  border-bottom: 3px solid #465775;
+  border-bottom: 3px solid var(--color-shade-3);
   padding-bottom: 3px;
 }
-
-.active {border-bottom: 4px solid #465775;}
 
 .name-header {
   font-family: 'Pacifico', cursive;
   font-size: 5em;
-  color: white;
+  color: var(--white-shade-1);
 }
 
 .hamburger div {transition: all 0.3s ease;}
-
-.toggle .line1{
-  transform: rotate(-45deg) translate(-5px, 6px);
-}
-
-.toggle .line2{
-  opacity: 0;
-}
-
-.toggle .line3{
-  transform: rotate(45deg) translate(-5px, -6px);
-}
+.toggle .line1 {transform: rotate(-45deg) translate(-5px, 6px);}
+.toggle .line2 {opacity: 0;}
+.toggle .line3 {transform: rotate(45deg) translate(-5px, -6px);}
 
 .hamburger.toggle {
   position: fixed;
   right: 5%;
 }
-
 /* END HEADER */
 
 /* FOOTER */
-
 footer {
   height: 10%;
   width: 100%;
-  background-color: #f1f1f1;
-  border-top: 2px solid #3498db;
+  background-color: var(--white-shade-2);
+  border-top: 2px solid var(--color-shade-2);
   -webkit-box-shadow: 0px -1px 10px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px -1px 10px 0px rgba(0,0,0,0.75);
   box-shadow: 0px -1px 10px 0px rgba(0,0,0,0.75);
@@ -175,11 +176,11 @@ footer {
   display: inline-block;
   margin: 0 10px 0 10px;
 }
-/*  #93BEDF,#465775, #3498db; */
+
 .footer-copyright {
   height: 25%;
   min-height: 17px;
-  background-color:  #465775!important;
+  background-color:  var(--color-shade-3)!important;
 }
 
 .footer-logo {
@@ -191,18 +192,18 @@ footer {
   display: inline-block;
   width: 40px;
   height: 40px;
-  background: #f1f1f1;
+  background: var(--white-shade-2);
   margin: 10px;
   border-radius: 30%;
-  box-shadow: 0 5px 30px -3px #465775;
-  color: #3498db;
+  box-shadow: 0 5px 30px -3px var(--color-shade-3);
+  color: var(--color-shade-2);
   overflow: hidden;
   position: relative;
   text-align: center;
 }
 
 .social-btn i {
-  color: #3498db;
+  color: var(--color-shade-2);
   line-height: 40px;
   font-size: 26px;
   transition: 0.2s linear;
@@ -210,7 +211,7 @@ footer {
 
 .social-btn:hover i {
   transform: scale(1.3);
-  color: #465775;
+  color: var(--color-shade-3);
 }
 
 .social-btn::before{
@@ -218,7 +219,7 @@ footer {
   position: absolute;
   width: 120%;
   height: 120%;
-  background: #3498db;
+  background: var(--color-shade-2);
   transform: rotate(45deg);
   left: -110%;
   top: 90%;
@@ -242,11 +243,9 @@ footer {
     left: -10%;
   }
 }
-
 /* END FOOTER */
 
 /* GLOBAL */
-
 .alert {
   width: 60%;
   margin: auto;
@@ -262,64 +261,37 @@ footer {
 .container {
   min-height: 75%;
   padding: 15px!important;
-  /*margin-top: 1rem;
-  background-color: #ffffff;
-  border-radius: 5px;
-  padding: 2em;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1em;
-  grid-auto-rows: minmax(100px, auto);*/
 }
 
 .container-fluid {
   min-height: 75%;
   padding: 15px!important;
-  /*margin-top: 1rem;*/
 }
-
-.register-form h1{
-  margin-bottom: 20px!important;
-}
+.register-form h1{margin-bottom: 20px!important;}
 
 .err404 {
   text-align: center;
   font-size: 10em;
-  color: white;
-  text-shadow: 1px 2px black;
+  color: var(--white-shade-1);
+  text-shadow: 1px 2px var(--black-shade-1);
   transform: translate(0%, 50%);
 }
-
 /* END GLOBAL */
 
 /* LOGIN */
+#login-form {padding: 0 20px 0 20px;}
 
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  font-family: montserrat;
-  box-sizing: border-box;
-}
-
-#login-form {
-  padding: 0 20px 0 20px;
-}
-
-.form-title {
-  color: #465775;
-}
-
+.form-title {color: var(--color-shade-3);}
 .form-container{
   min-width: 360px;
   max-width: 450px;
-  background: #f1f1f1;
+  background: var(--white-shade-2);
   padding: 40px 40px;
   border-radius: 10px;
   position: relative!important;
   left: 50%;
   transform: translate(-50%, 10%);
-  border: 1px solid #3498db;
+  border: 1px solid var(--color-shade-2);
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
@@ -329,46 +301,18 @@ footer {
   text-align: center;
   margin-bottom: 40px;
 }
-
-/*
-.login-form{
-  width: 360px;
-  background: #f1f1f1;
-  /*height: 500px;
-  padding: 40px 40px;
-  border-radius: 10px;
-  position: relative;
-  left: 50%;
-  top: 40%;
-  transform: translate(-50%, -50%);
-}
-
-.login-form h1{
-  text-align: center;
-  margin-bottom: 40px;
-}*/
-
-
 /* END LOGIN */
 
-.form-info
-{
-    font-style: italic;
-    color: #a87906;
-    display: none;
-}
-
 /* FORMS */
-
 .txtb{
-  border-bottom: 2px solid #adadad;
+  border-bottom: 2px solid var(--black-shade-3)ad;
   position: relative;
   margin: 30px 0;
 }
 
 .txtb input{
   font-size: 15px;
-  color: #333;
+  color: var(--black-shade-2);
   border: none;
   width: 100%;
   outline: none;
@@ -382,7 +326,7 @@ footer {
   position: absolute;
   top: 50%;
   left: 5px;
-  color: #adadad;
+  color: var(--black-shade-3)ad;
   transform: translateY(-50%);
   z-index: -1;
   transition: .5s;
@@ -395,7 +339,7 @@ footer {
   height: 2px;
   left: 0px;
   bottom: -5%;
-  background: linear-gradient(160deg, #93BEDF,#465775);
+  background: linear-gradient(160deg, var(--color-shade-1),var(--color-shade-3));
   transition: .5s;
 }
 
@@ -413,7 +357,7 @@ footer {
   width: 100%;
   height: 50px;
   border: none;
-  background: linear-gradient(160deg,#3498db,#93BEDF,#465775);
+  background: linear-gradient(160deg,var(--color-shade-2), var(--color-shade-1),var(--color-shade-3));
   background-size: 200%;
   color: #fff;
   outline: none;
@@ -447,10 +391,14 @@ footer {
   font-size: 13px;
 }
 
+.form-info {
+    font-style: italic;
+    color: var(--black-shade-4);
+    display: none;
+}
 /* END FORMS  */
 
 /* HOME */
-
 .thumbnail-wrapper {
   height: 15%;
   display: block;
@@ -464,51 +412,35 @@ footer {
 
 .carousel-indicators li {
   margin-top: 10px!important;
-  border: 2px solid white!important;
+  border: 2px solid var(--white-shade-1)!important;
   width: 17%!important;
   height: 100%!important;
   max-height: 100px;
 }
 
-.carousel-indicators li img {
-  height: 100px;
-}
-
+.carousel-indicators li img {height: 100px;}
 .carousel {
-  border: 5px solid #f1f1f1;
+  border: 5px solid var(--white-shade-2);
   border-radius: 5px;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
-.carousel-container {
-    height: 85%;
-   /* position: relative;
-    width: 60%;
-    left: 50%;
-    top: 47%;
-    transform: translate(-50%, -50%);*/
-}
+.carousel-container {height: 85%;}
 
-div.carousel-item.active {
-  border: 0px!important;
-}
+div.carousel-item.active {border: 0px!important;}
 
-.carousel-item img {
-  height: 57vh; /*this needs to be changed to responsive */
-}
-
+.carousel-item img {height: 57vh; /*this needs to be changed to responsive */}
 /* END HOME */
 
 /* BLOG */
-
 .container-blog {
   text-align: center;
-  background: #f1f1f1;
+  background: var(--white-shade-2);
   padding: 40px 40px;
   border-radius: 10px;
-  border: 1px solid #3498db;
+  border: 1px solid var(--color-shade-2);
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
@@ -518,26 +450,15 @@ div.carousel-item.active {
   font-family: 'Quicksand', sans-serif;
   font-size: 2.5em;
   font-weight: 600;
-  color: #465775;
+  color: var(--color-shade-3);
   margin: 0;
 }
 
-.blog-info {
-}
-
-.blog-author {
-  color: #93BEDF;
-}
-
-.blog-date {
-
-}
-
-.blog-content {
-}
-
-.blog-title {
-}
+.blog-info {}
+.blog-author {color: var(--color-shade-1);}
+.blog-date {}
+.blog-content {}
+.blog-title {}
 
 .blog-form {
   max-width: 800px;
@@ -554,45 +475,35 @@ div.carousel-item.active {
   box-shadow: 0px 0px 3px 0px rgba(13, 143, 255, 0.75)
 }
 
-/* SINGLE */
-
+/* SINGLE BLOG */
 .single-blog {
-  background: #f1f1f1;
+  background: var(--white-shade-2);
   padding: 40px 40px;
   border-radius: 10px;
-  border: 1px solid #3498db;
+  border: 1px solid var(--color-shade-2);
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
-
 /* END SINGLE */
 /* END BLOG */
 
-.info-update {
-  border-radius: 5px;
-  transform: translate(-50%, 0%);
-}
-
 /* BIO */
-
 .container-bio {
   min-width: 360px;
   max-width: 450px;
-  background: #f1f1f1;
+  background: var(--white-shade-2);
   padding: 20px 20px;
   border-radius: 10px;
   position: relative!important;
-  border: 1px solid #3498db;
+  border: 1px solid var(--color-shade-2);
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
-
 /* END BIO */
 
 /* GALLERY */
-
 .card {margin: 10px;}
 
 .container-gallery {
@@ -604,9 +515,7 @@ div.carousel-item.active {
   -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
 
-
 /* Styles the lightbox, removes it from sight and adds the fade-in transition */
-  
 .lightbox-target {
   position: fixed;
   top: -100%;
@@ -622,7 +531,6 @@ div.carousel-item.active {
 }
   
 /* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
-  
 .lightbox-target img {
   margin: auto;
   position: absolute;
@@ -632,7 +540,7 @@ div.carousel-item.active {
   bottom: 0;
   max-height: 0%;
   max-width: 0%;
-  border: 3px solid white;
+  border: 3px solid var(--white-shade-1);
   box-shadow: 0px 0px 8px rgba(0,0,0,.3);
   box-sizing: border-box;
   -webkit-transition: .5s ease-in-out;
@@ -642,7 +550,6 @@ div.carousel-item.active {
 }
   
 /* Styles the close link, adds the slide down transition */
-  
 a.lightbox-close {
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
@@ -650,9 +557,7 @@ a.lightbox-close {
   transition: .5s ease-in-out;
 }
   
-  
 /* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
-  
 .lightbox-target:target {
   opacity: 1;
   top: 0;
@@ -676,16 +581,11 @@ a.lightbox-close {
 /* END PATCH POST */
 
 /* SINGLE */
-
-.single-gallery {
-
-}
-
+.single-gallery {}
 /* END SINGLE */
 /* END GALLERY */
 
 /* CONTACT */
-
 .contact-form {
   min-width: 360px;
   max-width: 800px;
@@ -696,33 +596,25 @@ a.lightbox-close {
   text-align: center;
   margin-bottom: 40px;
 }
-
 /* END CONTACT */
 
-.lostpw-form {
-  transform: translate(-50%, 20%);
-}
 
 /* CART */
-
 .container-cart {
-  background: #f1f1f1;
+  background: var(--white-shade-2);
   padding: 40px 40px;
   border-radius: 10px;
-  border: 1px solid #3498db;
+  border: 1px solid var(--color-shade-2);
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
-.cart-row {
-  display: flex;
-}
-
+.cart-row {display: flex;}
 .cart-column {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--black-shade-1);
   margin-right: 1.5em;
   padding-bottom: 10px;
   margin-top: 10px;
@@ -731,49 +623,30 @@ a.lightbox-close {
 .cart-header {
   font-weight: bold;
   font-size: 1.25em;
-  color: #333;
+  color: var(--black-shade-2);
 }
 
-.cart-item {
-  width: 45%;
-}
-
+.cart-item {width: 45%;}
 .cart-price {
   width: 20%;
   font-size: 1.2em;
-  color: #333;
+  color: var(--black-shade-2);
 }
 
-.cart-quantity {
-  width: 35%;
-}
-
-.cart-img {
-  width: 150px;
-}
-
-.cart-title-description {
-  margin-left: 10px;
-}
+.cart-quantity {width: 35%;}
+.cart-img {width: 150px;}
+.cart-title-description {margin-left: 10px;}
 
 .qty-update {
   font-size: 40px;
   cursor: pointer;
-  color: #3498db;
+  color: var(--color-shade-2);
   margin: 0 10px 0 10px;
 }
 
-.qty-increase {
-
-}
-
-.qty-decrease {
-
-}
-
-.cart-item-title {
-  border-bottom: 1px solid black;
-}
+.qty-increase {}
+.qty-decrease {}
+.cart-item-title {border-bottom: 1px solid var(--black-shade-1);}
 
 .cart-total {
   text-align: end;
@@ -781,10 +654,6 @@ a.lightbox-close {
   margin-right: 10px;
 }
 /* END CART */
-
-
-
-
 
 /* Extra small devices (portrait phones, less than 576px)
  No media query for `xs` since this is the default in Bootstrap*/
@@ -796,9 +665,9 @@ a.lightbox-close {
 }
 /* Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) {
-  header {background-color: white;}
+  header {background-color: var(--white-shade-1);}
   .navbar-container {
-      background-color: white;
+      background-color: var(--white-shade-1);
       position: fixed;
       top: 0;
       left: 0;
