refactored User page, added new very cool design, tab, displaying properly orders and forms, made footer sticky properly, added user menu

--- a/views/User.ejs
+++ b/views/User.ejs
@@ -1,132 +1,239 @@
 <% include partials/head %>
 
 <script src="/scripts/order.js"></script>
-<div class="container">
-  <div class="orders">
-      <h1>Orders</h1>
-      <% if (locals.orders) { %>
-        <% Object.keys(locals.orders).forEach(function (index) { %>
-          <a href="/Order/<%= locals.orders[index]._id %>"><%= locals.orders[index]._id %></a> - STATUS: <%= locals.orders[index].status %> 
-          <!-- show cancel order and let order be cancellable only if shipping hasnt started -->
-          <% if (locals.orders[index].status === "Validated") { %> <!-- need better condition here -->
-            <i style="color:red; cursor: pointer" onclick="cancelOrder('<%= locals.orders[index]._id %>')" class="far fa-times-circle">CANCEL ORDER</i>
-          <% } %>
-          <br/>
-        <% }) %>
-      <% } %>
-  </div>
-  <hr />
-  
-  <div class="panel-heading">
-    <h2 class="panel-title">Delivery Informations</h2>
-    <h6>*Make sure the informations you enter are correct, we will be using them for delivery</h6>
-  </div>
-  <div class="panel panel-primary">
-    <form id="deliveryform" method="POST" action="/api/user/patch/delivery-info">
-      <div class="row">
-        <div class="col-md-6">
-          <label class="control-label">Last Name</label>
-          <input class="form-control" id="lastname" name="lastname" placeholder="Doe" value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
-          <span id="i_lastname" class="form-info">Last Name must contain between 2 and 128 characters</span>
-        </div>
-        <div class="col-md-6">
-          <label class="control-label">First Name</label>
-          <input class="form-control" id="firstname" name="firstname" placeholder="John" value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
-          <span id="i_firstname" class="form-info">First Name must contain between 2 and 128 characters</span>
-        </div>
-      </div>
-    <div class="panel-body">
-      <label class="control-label">Address</label>        
-      <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" onFocus="geolocate()" class="form-control" value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>" required>
-      <div id="address">
-        <div class="row">
-            <!--<div class="col-md-6">
-            <label class="control-label">Street number</label>
-            <input class="form-control" id="street_number" name="street_number" required>
-          </div>-->
-          <div class="col-md-12">
-            <label class="control-label">Route</label>
-            <input class="form-control" id="route" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <label class="control-label">City</label>
-            <input class="form-control field" id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required>
-          </div>
-          <div class="col-md-6"> 
-            <label class="control-label">State</label>
-            <input class="form-control" id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <label class="control-label">Zip code</label>
-            <input class="form-control" id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required>
-          </div>
-          <div class="col-md-6">
-            <label class="control-label">Country</label>
-            <input class="form-control" id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 offset-3">
-            <textarea id="instructions" class="blog-textarea mt-2" name="instructions" placeholder="Door code or other useful informations..."><% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea>
-          </div>
-        </div>
-      </div>
+
+<div class="container-user container">
+  <div class="row m-0 p-0 row-user">
+    <div class="user-menu col-3">
+      <ul>
+        <li><a href="#" onclick="openTab(event, 'user-parameters')"><i class="fas fa-cog mr-2"></i> Paramètres <i class="fas fa-chevron-right active disabled" style="margin-top: 10px;float: right;"></i></a></li>
+        <li><a href="#" onclick="openTab(event, 'user-purchases')"><i class="fas fa-truck mr-2"></i> Achats  <i class="fas fa-chevron-right" style="margin-top: 10px;float: right;"></i></a></li>
+        <li><a href="/shopping-cart"><i class="fas fa-shopping-cart mr-2"></i> Panier</a></li>
+      </ul>
     </div>
-    <br />
-    <input type="submit" class="logbtn info-update-btn" value="Update" id="submit-deliveryform">
-    </form>
-  </div>
-</div>
 
-<div class="container">
-  <div class="form-container info-update"><!--change class form id etc api url-->
-    <h1 class="form-title">Paramètres</h1>
-
-    <form id="nameform" method="POST" action="/api/user/patch/name">
-      <div class="txtb">
-        <input type="text" id="name" name="name" value="<% if (locals.name) { %><%= locals.name %><% } %>" onkeyup="Validate.String(this, 4, 30);" required>
-        <span data-placeholder="Username"></span>
-        <span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
-      </div>
-      <input type="submit" class="logbtn info-update-btn" value="Update" id="submit-nameform">
-    </form>
-
-    <form id="emailform" method="POST" action="/api/user/patch/email">
-      <div class="txtb">
-        <input type="email" id="email" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" onkeyup="Validate.Email(this);" required>
-        <span data-placeholder="Email"></span>
-        <span id="i_email" class="form-info">E-mail has to be valid</span>
+    <div id="user-parameters" class="tab col-9 row">
+      <section class="user-section col-8">
+        <div class="user-heading">
+          <h2>Livraison</h2>
+          <h6>Nous utiliserons ces informations pour livrer vos commandes</h6>
         </div>
-        <input type="submit" class="logbtn info-update-btn" value="Update" id="submit-emailform">
-    </form>
+          <form id="deliveryform" method="POST" action="/api/user/patch/delivery-info">
+            <div class="row">
+              <div class="col-md-6">
+                <label class="control-label">Nom</label>
+                <input class="form-control" id="lastname" name="lastname" placeholder="Doe" value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
+                <span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
+              </div>
+              <div class="col-md-6">
+                <label class="control-label">Prénom</label>
+                <input class="form-control" id="firstname" name="firstname" placeholder="John" value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
+                <span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
+              </div>
+            </div>
+          <div>
+            <label class="control-label">Adresse</label>        
+            <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" onFocus="geolocate()" class="form-control" value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>" required>
+            <div id="address">
+              <div class="row">
+                <div class="col-md-12">
+                  <label class="control-label">Route</label>
+                  <input class="form-control" id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <label class="control-label">Ville</label>
+                  <input class="form-control field" id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required>
+                </div>
+                <div class="col-md-6"> 
+                  <label class="control-label">Région</label>
+                  <input class="form-control" id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <label class="control-label">Code Postal</label>
+                  <input class="form-control" id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required>
+                </div>
+                <div class="col-md-6">
+                  <label class="control-label">Pays</label>
+                  <input class="form-control" id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required>
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col-6">
+                  <textarea id="instructions" class="instructions-textarea" name="instructions" placeholder="Door code or other useful informations..."><% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea>
+                </div>
+                <div class="col-6">
+                <input type="submit" class="logbtn info-update-btn" value="Enregistrer" id="submit-deliveryform">
+              </div>
+              </div>
+            </div>
+          </div>
+          </form>
+      </section>
+
+      <section class="user-section col-4">
+        <div class="user-heading">
+          <h2>Compte</h2>
+          <h6>Gardez ces informations pour vous!</h6>
+        </div>
+
+        <div class="account-wrapper">
         
-    <form id="passwordform" method="POST" action="/api/user/patch/password">
-      <div class="txtb">
-        <input type="password" name="cpassword" required>
-        <span data-placeholder="Current Password"></span>
+          <form id="nameform" method="POST" action="/api/user/patch/name">
+            <label class="control-label">Nom de compte</label>
+            <input class="form-control" type="text" id="name" name="name" value="<% if (locals.name) { %><%= locals.name %><% } %>" onkeyup="Validate.String(this, 4, 30);" required>
+            <span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
+            <input type="submit" class="logbtn info-update-btn mt-2" value="Update" id="submit-nameform">
+          </form>
+       
+
+       
+          <form id="emailform" method="POST" action="/api/user/patch/email">
+            <label class="control-label">Email</label>
+            <input class="form-control" type="email" id="email" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" onkeyup="Validate.Email(this);" required>
+            <span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
+            <input type="submit" class="logbtn info-update-btn mt-2" value="Update" id="submit-emailform">
+          </form>
+     
+
+     
+          <form id="passwordform" method="POST" action="/api/user/patch/password">
+            <label class="control-label">Mot de passe <i>(actuel)</i></label>
+            <input class="form-control" type="password" name="cpassword" placeholder="*********" required>
+            <span data-placeholder="Current Password"></span>
+
+            <label class="control-label mt-3">Mot de passe <i>(nouveau)</i></label>
+            <input class="form-control" type="password" id="password" name="password" placeholder="*********" onkeyup="Validate.Password(this);" required>
+            <span id="i_password" class="form-info"><b>Password</b> must contain between <b>8 and 256 characters</b> and has to be atleast <b>alphanumeric</b></span>
+
+            <label class="control-label">Mot de passe <i>(confirmation)</i></label>
+            <input class="form-control" type="password" id="password2" name="password2" placeholder="*********" onkeyup="Validate.Password2(this);" required>
+            <span id="i_password2" class="form-info"><b>Password</b> has to be the <b>identical</b> to the one you just entered</span>
+            <input type="submit" class="logbtn info-update-btn mt-2" value="Update" id="submit-passwordform">
+          </form>
+       
       </div>
-      <div class="txtb">
-        <input type="password" id="password" name="password" onkeyup="Validate.Password(this);" required>
-        <span data-placeholder="Password"></span>
-        <span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to be atleast alphanumeric</span>
-      </div>
-      <div class="txtb">
-        <input type="password" id="password2" name="password2" onkeyup="Validate.Password2(this);" required>
-        <span data-placeholder="Confirm password"></span>
-        <span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
-      </div>
-      <input type="submit" class="logbtn info-update-btn" value="Update" id="submit-passwordform">
-    </form>
+      </section>
+    </div>
+
+    <div id="user-purchases" class="tab col-9" style="display: none;">
+      <section class="purchase-section">
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Date</th>
+              <th scope="col">Status</th>
+              <th scope="col">Prix</th>
+              <th scope="col">Acheteur</th>
+              <th scope="col">#ID</th>
+            </tr>
+          </thead>
+
+          <tbody>
+
+            <% if (locals.orders) { %>
+              <% Object.keys(locals.orders).forEach(function (index) { %>
+                <tr>
+                  <th scope="row" class="date-grid"><%= locals.orders[index].date_f %></th>
+                  <td class="status-grid"><%= locals.orders[index].status %></td class="status-grid">
+                  <td class="price-grid"><%= locals.orders[index].price %>€</td>
+                  <td class="name-grid"><%= locals.orders[index].firstname[0] %>. <%= locals.orders[index].lastname %></td class="name-grid">
+                  <td class="id-grid"  style=" width: 50px;white-space: nowrap;
+                  overflow: hidden;
+                  text-overflow: ellipsis;"><a href="/Order/<%= locals.orders[index]._id %>">#<%= locals.orders[index]._id %></a></td class="id-grid">
+                </tr>
+              <% }) %>
+            <% } %>
+
+            <tr>
+              <th scope="row" class="date-grid">12/03/2019</th>
+              <td class="status-grid">En cours de livraison</td class="status-grid">
+              <td class="price-grid">45.00€</td>
+              <td class="name-grid">S. Hagakian</td class="name-grid">
+              <td class="id-grid"><a href="#">#524853216544</a></td class="id-grid">
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">01/01/2020</th>
+              <td class="status-grid">Livré</td class="status-grid">
+              <td class="price-grid">750.00€</td class="price-grid">
+              <td class="name-grid">A. Blin</td class="name-grid">
+              <td class="id-grid">#5784365621</td class="id-grid">
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">05/12/2017</th>
+              <td class="status-grid">Validé</td>
+              <td class="price-grid">19.95€</td class="price-grid">
+              <td class="name-grid">J. Dupont</td>
+              <td class="id-grid">#876453135</td>
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">12/03/2019</th>
+              <td class="status-grid">En cours de livraison</td class="status-grid">
+              <td class="price-grid">45.00€</td>
+              <td class="name-grid">S. Hagakian</td class="name-grid">
+              <td class="id-grid">#524853216544</td class="id-grid">
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">01/01/2020</th>
+              <td class="status-grid">Livré</td class="status-grid">
+              <td class="price-grid">750.00€</td class="price-grid">
+              <td class="name-grid">A. Blin</td class="name-grid">
+              <td class="id-grid">#5784365621</td class="id-grid">
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">05/12/2017</th>
+              <td class="status-grid">Validé</td>
+              <td class="price-grid">19.95€</td class="price-grid">
+              <td class="name-grid">J. Dupont</td>
+              <td class="id-grid">#876453135</td>
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">12/03/2019</th>
+              <td class="status-grid">En cours de livraison</td class="status-grid">
+              <td class="price-grid">45.00€</td>
+              <td class="name-grid">S. Hagakian</td class="name-grid">
+              <td class="id-grid">#524853216544</td class="id-grid">
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">01/01/2020</th>
+              <td class="status-grid">Livré</td class="status-grid">
+              <td class="price-grid">750.00€</td class="price-grid">
+              <td class="name-grid">A. Blin</td class="name-grid">
+              <td class="id-grid">#5784365621</td class="id-grid">
+            </tr>
+            <tr>
+              <th scope="row" class="date-grid">05/12/2017</th>
+              <td class="status-grid">Validé</td>
+              <td class="price-grid">19.95€</td class="price-grid">
+              <td class="name-grid">J. Dupont</td>
+              <td class="id-grid">#876453135</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </div>
   </div>
 </div>
+
+<script>
+
+function openTab(e, tabName) {
+  e.preventDefault();
+  let tab = document.getElementsByClassName("tab");
+  for (let i = 0; i < tab.length; i++) {
+    tab[i].style.display = "none";  
+  }
+  document.getElementById(tabName).style.display = "flex";
+}
+
+</script>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBluorKuf7tdOULcDK08oZ-98Vw7_12TMI&libraries=places&callback=initAutocomplete" async defer></script>
 <script src="scripts/auto-complete.js"></script>
-<script src="/scripts/formFocus.js"></script>
+<!--<script src="/scripts/formFocus.js"></script>-->
 <script src="/scripts/frontValidation.js"></script>
   
 <% include partials/footer %>
