--- a/public/style.css
+++ b/public/style.css
@@ -24,15 +24,35 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 body, html {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+
   height: 100vh;
   width: 100vw;
   min-width: 500px;
   background-attachment: fixed;
   background-image: linear-gradient(45deg, rgba(48, 160, 200, 0.36) 0%, rgba(48, 160, 200, 0.36) 27%,rgba(66, 208, 212, 0.36) 27%, rgba(66, 208, 212, 0.36) 30%,rgba(57, 184, 206, 0.36) 30%, rgba(57, 184, 206, 0.36) 38%,rgba(75, 232, 218, 0.36) 38%, rgba(75, 232, 218, 0.36) 41%,rgba(38, 135, 193, 0.36) 41%, rgba(38, 135, 193, 0.36) 67%,rgba(29, 111, 187, 0.36) 67%, rgba(29, 111, 187, 0.36) 68%,rgba(20, 87, 181, 0.36) 68%, rgba(20, 87, 181, 0.36) 71%,rgba(11, 63, 175, 0.36) 71%, rgba(11, 63, 175, 0.36) 100%),linear-gradient(45deg, rgba(120, 161, 172, 0.37) 0%, rgba(120, 161, 172, 0.37) 12.5%,rgba(83, 81, 120, 0.37) 12.5%, rgba(83, 81, 120, 0.37) 25%,rgba(132, 188, 189, 0.37) 25%, rgba(132, 188, 189, 0.37) 37.5%,rgba(95, 108, 137, 0.37) 37.5%, rgba(95, 108, 137, 0.37) 50%,rgba(144, 215, 206, 0.37) 50%, rgba(144, 215, 206, 0.37) 62.5%,rgba(107, 135, 154, 0.37) 62.5%, rgba(107, 135, 154, 0.37) 75%,rgba(156, 242, 223, 0.37) 75%, rgba(156, 242, 223, 0.37) 87.5%,rgba(71, 54, 103, 0.37) 87.5%, rgba(71, 54, 103, 0.37) 100%),linear-gradient(63deg, rgb(156, 214, 233),rgb(74, 10, 132));
-  /*overflow-x: hidden;*/
+  overflow-x: hidden;
 }
-.container {max-width: 1340px!important;}
+.container {max-width: 1340px!important; margin: 1em auto; flex: 1;}
+
+
+input:-webkit-autofill {
+  -webkit-box-shadow:0 0 0 50px white inset; /* Change the color to your own background color */
+  -webkit-text-fill-color: var(--color-shade-2);
+}
+
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 50px white inset;/*your box-shadow*/
+  -webkit-text-fill-color: var(--color-shade-2);
+}
 
 .inputfile {
   width: 0;
@@ -62,9 +82,7 @@ header {
   background-color: transparent;
   justify-content: space-around;
   align-items: center;
-  padding: 15px 5%;
-  min-height: 15%;
-  max-height: 15%;
+  padding: 0px 5%;
   transition: 0.3s ease;
 }
 
@@ -116,7 +134,7 @@ header:hover .navbar-container .navbar-custom .logo, header:hover .navbar-contai
   display: inline-block;
   margin: 0 20px;
 }
-.active {border-bottom: 4px solid var(--color-shade-3);}
+.navbar-text.active {border-bottom: 4px solid var(--color-shade-3);}
 .nav-links li:hover {background-color: var(--white-shade-2);}
 
 .nav-links li a {
@@ -454,8 +472,8 @@ div.carousel-item.active {border: 0px!important;}
   margin: 0;
 }
 
-.blog-info {}
 .blog-author {color: var(--color-shade-1);}
+.blog-info {}
 .blog-date {}
 .blog-content {}
 .blog-title {}
@@ -467,7 +485,7 @@ div.carousel-item.active {border: 0px!important;}
 
 .blog-textarea {
   width: 100%;
-  min-height: 175px;
+  min-height: 100px;
   padding: 15px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
@@ -709,6 +727,10 @@ a.lightbox-close {
       margin: auto;
       transition: all 0.5s ease 0.1s;
   }
+  .footer-logo {
+    width: 2em!important;
+    height: 2em!important;
+  }
 
   .nav-links li, .logo {opacity: 0;}
   .nav-links li:nth-child(1) {transition: all 0.5s ease 0.1s;}
@@ -721,11 +743,7 @@ a.lightbox-close {
   .nav-links li:nth-child(8) {transition: all 0.5s ease 0.8s;}
   .nav-links li:nth-child(9) {transition: all 0.5s ease 0.9s;}
   li.fading, .logo.fading {opacity: 1;}
-  
-  .footer-logo {
-    width: 2em!important;
-    height: 2em!important;
-  }
+
   .container {padding: 0px; }
   .carousel-indicators li {max-height: 40px!important;}
   .carousel-indicators li img {height: 40px!important;}
@@ -744,3 +762,145 @@ a.lightbox-close {
 @media (max-width: 1200px) {
 
 }
+
+/* NEW USER PAGE */
+.container-user {
+  background-color: var(--white-shade-2);
+  border-radius: 10px;
+  padding: 0!important;
+  box-shadow: 6px 6px 5px -2px rgba(42, 67, 111, 0.67), -6px -6px 5px -2px rgba(155, 183, 232, 0.23);
+  box-sizing: border-box;
+  min-height: unset;
+}
+
+.row-user {height: 100%;}
+
+.user-menu {
+  background-color: #4b60ae;
+  border-radius: 10px 0 0 10px;
+}
+
+.user-menu li {
+  list-style-type: none;
+  font-size: 30px;
+  margin: 20px 10px;
+}
+
+.user-menu a {
+  color: var(--white-shade-1);
+}
+
+.user-menu a:hover {
+  text-decoration: none;
+  color: var(--color-shade-1);
+}
+
+.user-section {
+  padding: 20px!important;
+}
+
+.user-section.col-8 {
+  box-shadow: -1px 0 2px 0 rgb(75, 96, 174, 0.75);
+}
+.user-section.col-4 {
+  box-shadow: -1px 0 2px 0 rgb(75, 96, 174, 0.75);
+}
+
+.user-heading {
+  text-align: center;
+  border-bottom: 1px solid var(--color-shade-2);
+  margin-bottom: 5px;
+}
+.user-heading h2 {
+  color: var(--color-shade-2);
+  font-size: 40px;
+}
+.user-heading h6 {
+  margin-top: -2px;
+  color: var(--dark-shade-2);
+  opacity: 0.5;
+  font-style: italic;
+}
+
+.control-label {
+  color: var(--color-shade-3);
+  font-weight: bold;
+  font-size: 18px;
+  margin: 10px 0 2px 3px;
+}
+
+.form-control {
+  color: var(--color-shade-2)!important;
+  background-color: #e6e6e6!important;
+  border: none!important;
+  box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23)!important;
+}
+
+.form-control:focus {
+  box-shadow: 0 0 4px 1px rgb(73, 161, 220)!important;
+}
+
+.form-info {
+  font-size: 10px;
+  text-align: center;
+  width: 100%;
+  color: var(--dark-shade-4)
+}
+
+#nameform, #emailform {
+  margin: 5px 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--color-shade-2);
+}
+
+#submit-deliveryform {
+  min-height: 100px;
+  padding: 0 15px
+}
+
+.instructions-textarea {
+  width: 100%;
+  min-height: 100px;
+  padding: 15px;
+  border-radius: 5px;
+  color: var(--color-shade-2)!important;
+  background-color: #e6e6e6!important;
+  border: none!important;
+  box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23)!important;
+}
+
+.fa-chevron-right.active {
+  color: var(--color-shade-2);
+}
+
+.purchase-section {
+  min-height: 60vh;
+  width: 100%;
+  padding: 25px;
+  margin: 25px 0 25px 0;
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+}
+
+.date-grid {
+  font-style: italic;
+  color: var(--color-shade-2)
+}
+
+.price-grid {
+  font-weight: bold;
+}
+
+.id-grid {
+  max-width: 125px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+td a {
+  color: var(--color-shade-1)!important;
+  text-decoration: underline;
+  font-size: 15px;
+}
+
+/* END NEW USER PAGE*/
